[package]
name = "cfg"
version = "0.1.0"
edition = "2021"

[dependencies]
async-nats = "0.40.0"
config = "0.15.11"
dotenvy = "0.15.7"
expanduser = "1.2.2"
figment = { version = "0.10.19", features = ["env"] }
futures = "0.3.31"
serde = "1.0.219"
testcontainers = "0.24.0"
tokio = { version = "1.44.2", features = ["full"] }

[dev-dependencies]
testcontainers = "0.24.0"
